# rk8s

./: .buckconfig  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  BUCK  LICENSE-APACHE  LICENSE-MIT  README.md
project/: Cargo.toml  README.md
project/common/: BUCK  Cargo.toml
project/common/src/: lib.rs
project/distribution/: .env.example  .gitignore  BUCK  Cargo.toml  Dockerfile  README.md  compose.yaml  test_registry.sh
project/distribution/migrations/: 20250827092726_create_users_table.sql  20250827165506_create_repos_table.sql
project/distribution/src/: config.rs  error.rs  main.rs
project/distribution/src/api/: middleware.rs  mod.rs  v2.rs
project/distribution/src/domain/: mod.rs  repo_model.rs  user_model.rs
project/distribution/src/service/: auth.rs  blob.rs  manifest.rs  mod.rs  repo.rs  user.rs
project/distribution/src/storage/: mod.rs  paths.rs  repo_storage.rs  user_storage.rs
project/distribution/src/utils/: cli.rs  jwt.rs  mod.rs  password.rs  repo_identifier.rs  state.rs  validation.rs
project/libbridge/: BUCK  Cargo.toml  README.md
project/libbridge/src/: error.rs  main.rs  types.rs
project/libcgroups/: BUCK  Cargo.toml
project/libcgroups/src/: lib.rs
project/libcgroups/src/v1/: devices.rs  memory.rs
project/libcgroups/src/v2/: cpu.rs
project/libcni/: BUCK  Cargo.toml  README.md
project/libcni/src/: lib.rs  tests.rs
project/libcni/src/ip/: addr.rs  ipam.rs  link.rs  mod.rs  route.rs  utils.rs  veth.rs
project/libcni/src/ns/: netns.rs  ns.rs
project/libcni/src/rust_cni/: api.rs  cni.rs  config.rs  exec.rs  mod.rs  namespace.rs  plugin.rs
project/libcontainer/: BUCK  Cargo.toml
project/libcontainer/src/: channel.rs  config.rs  lib.rs  user_ns.rs  utils.rs
project/libcontainer/src/container/: tenant_builder.rs
project/libcontainer/src/process/: channel.rs  container_init_process.rs
project/libcontainer/src/rootfs/: utils.rs
project/libcontainer/src/syscall/: linux.rs  test.rs
project/libflannel/: BUCK  Cargo.toml  README.md
project/libflannel/src/: main.rs
project/libfuse-fs/: .gitignore  BUCK  Cargo.toml  README.md  overlay.md  umount.bash
project/libfuse-fs/docs/: tech.md  tech_zh.md
project/libfuse-fs/examples/: overlayfs_example.rs  passthrough_example.rs
project/libfuse-fs/src/: lib.rs  main.rs
project/libfuse-fs/src/examples/: overlayfs_example.rs  passthrough_example.rs
project/libfuse-fs/src/overlayfs/: async_io.rs  config.rs  inode_store.rs  layer.rs  mod.rs  tempfile.rs  utils.rs
project/libfuse-fs/src/passthrough/: async_io.rs  config.rs  file_handle.rs  inode_store.rs  logfs.rs  mmap.rs  mod.rs  mount_fd.rs  newlogfs.rs  statx.rs  util.rs
project/libfuse-fs/src/server/: mod.rs
project/libfuse-fs/src/util/: atomic.rs  mod.rs  open_options.rs
project/libfuse-fs/tests/: build_tree.bash  integration_test.sh  ior  many_files.bash  passthrough_perf_test.py
project/libipam/: BUCK  Cargo.toml  README.md
project/libipam/src/: allocator.rs  config.rs  disk.rs  main.rs  range.rs  range_set.rs
project/libnetwork/: BUCK  Cargo.toml
project/libnetwork/src/: main.rs  types.rs
project/libscheduler/: BUCK  Cargo.toml  README.md
project/libscheduler/src/: cache.rs  cycle_state.rs  lib.rs  models.rs  scheduler.rs
project/libscheduler/src/algorithms/: basic.rs  mod.rs
project/libscheduler/src/plugins/: balanced_allocation.rs  mod.rs  node_affinity.rs  node_name.rs  node_resources_fit.rs  node_unschedulable.rs  priority_sort.rs  scheduling_gates.rs  taint_toleration.rs
project/libscheduler/src/with_xline/: mod.rs  model.rs  utils.rs
project/libscheduler/tests/: edge_cases.rs  test_scheduler.rs  xline_test.rs
project/rfuse3/: BUCK  CONCURRENCY.md  Cargo.toml  README.md
project/rfuse3/src/: lib.rs  mount_options.rs
project/rfuse3/src/raw/: filesystem.rs  request.rs  session.rs
project/rkb/: .gitignore  BUCK  Cargo.toml  README.md  example-Dockerfile
project/rkb/src/: args.rs  build_arg.rs  config.rs  exec_main.rs  lib.rs  login_main.rs  logout_main.rs  main.rs  mount_main.rs  registry.rs  repo_main.rs  rt.rs  run.rs
project/rkb/src/chroot/: chroot_linux.rs  mod.rs
project/rkb/src/commands/: logout.rs  mod.rs  mount.rs  repo.rs
project/rkb/src/compression/: compress_layer.rs  layer_compression_config.rs  layer_compression_result.rs  mod.rs
project/rkb/src/compressor/: mod.rs  tar_gz_compressor.rs
project/rkb/src/image_build/: builder.rs  config.rs  executor.rs  mod.rs  stage_executor.rs
project/rkb/src/oci_spec/: builder.rs  config.rs  index.rs  manifest.rs  mod.rs  oci_builder.rs  oci_image_config.rs  oci_image_index.rs  oci_image_manifest.rs
project/rkb/src/overlayfs/: mod.rs  mount_config.rs  mount_libfuse.rs  mount_linux.rs
project/rkb/src/parse/: build_args.rs  mod.rs
project/rkb/src/registry/: mod.rs  pull_image.rs
project/rkb/src/utils/: build_error.rs
project/rkl/: .gitignore  BUCK  Cargo.toml  README.md  config.json  container_task.yaml  container_task1.yaml  test-network.sh  测试文档.md
project/rkl/rkl_cli/: main.rs  pod.yaml
project/rkl/src/: bundle.rs  cli_commands.rs  lib.rs  main.rs  rootpath.rs  task.rs
project/rkl/src/cli_commands/: compose.rs  container.rs  mod.rs  pod.rs
project/rkl/src/commands/: create.rs  exec.rs  (+6 more)
project/rkl/test/: pod-with-a-container.yaml  pod_with_2containers.yaml  pod_with_a_container.yaml  test.conf
project/rkl/tests/: common.rs  test_cli_commands.rs  test_common.rs  test_compose.rs  test_network.rs  test_pod.rs  test_single_container.rs  test_sync_loop.rs
project/rklet/: Cargo.toml
project/rks/: BUCK  Cargo.toml
project/rks/src/: cli.rs  lib.rs  main.rs  scheduler.rs  server.rs
project/rks/tests/: config.yaml  init_integration.rs  node.yaml  test_scheduler.rs  test_watch.rs  test_xline.rs
project/slayerfs/: BUCK  Cargo.toml  README.md  README_CN.md
project/slayerfs/doc/: arch.md  sdk.md
project/slayerfs/src/: lib.rs  main.rs
project/test/: README.md  subnet.env  test.conflist
project/tools/scripts/: clippy_allow_all.patch  container_init_process.patch  sync_youki.sh
(+125 files in other folders)
