[workspace]
members = [
    "distribution", 
    "libbridge",
    "libcgroups", 
    "libcni",
    "libcontainer", 
    "libflannel",
    "libfuse-fs", 
    "rfuse3", 
    "libipam", 
    "rkb",
    "rkl", 
    "rks",
]

default-members = ["distribution", "rkl", "libbridge", "libipam", "rkb","rks"]
resolver = "1"

[workspace.dependencies]
distribution = { path = "distribution" }
libcgroups = { path = "libcgroups" }
libcni = { path = "libcni" }
libcontainer = { path = "libcontainer" }
libfuse-fs = { path = "libfuse-fs" }
