[workspace]
members = [
    "distribution", 
    "libbridge",
    "libcgroups", 
    "libcni",
    "libcontainer", 
    "libnetwork",
    "libfuse-fs", 
    "rfuse3", 
    "libipam", 
    "rkb",
    "rkl",
    "rks",
    "libscheduler", "common",
]

default-members = ["distribution", "rkl", "libbridge", "libipam", "rkb", "libnetwork","rks"]
resolver = "1"

[workspace.dependencies]
distribution = { path = "distribution" }
libcgroups = { path = "libcgroups" }
libcni = { path = "libcni" }
libcontainer = { path = "libcontainer" }
libfuse-fs = { path = "libfuse-fs" }
libnetwork = { path = "libnetwork"}
