[package]
name = "common"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "Pod and Node definitions for rk8s"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/common"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
libcni = { path = "../libcni" }
serde_json = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
ipnetwork = "0.17"