[package]
name = "libbridge"
version = "0.1.0"
edition = "2024"

[dependencies]
libcni = { path = "../libcni" }
cni-plugin = { version = "0.2.1", features = ["with-smol"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
macaddr = "1.0.1"
netlink-packet-route = "0.22.0"
rtnetlink =  "0.16.0"
anyhow = "1.0.97"
log = "0.4.26"
nix = "0.29.0"
rand = "0.9.0"
async-std = "1.12"
serde = "1.0.219"
serde_json = "1.0.107"
semver = "0.11.0"
thiserror = "2.0.12"
ipnetwork = "0.17.0"
