[package]
name = "libcni"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "A Library For CNI-Plugins"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/libcni"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3"
cni-plugin = "0.2.1"
futures = "0.3.31"
macaddr = "1.0.1"
netlink-packet-route = "0.22.0"
rtnetlink =  "0.16.0"
anyhow = "1.0.98"
log = "0.4.26"
nix = "0.29.0"
rand = "0.9.0"
ipnetwork = "0.17.0"
bitflags = "2.9.1"
libc = "0.2.0"