[package]
name = "libflannel"
version = "0.1.0"
edition = "2024"

[dependencies]
libcni = { path = "../libcni" }
cni-plugin = { version = "0.2.1", features = ["with-smol"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
anyhow = "1.0.97"
log = "0.4.26"
serde = "1.0.219"
serde_json = "1.0.107"
ipnetwork = "0.17.0"
tempfile = "3.19.1"