[package]
name = "rfuse3"
version = "0.0.3"
edition = "2021"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["api-bindings", "filesystem"]
license = "MIT"
description = "FUSE user-space library async version implementation."
rust-version = "1.77"
exclude = ["BUCK"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["tokio-runtime", "unprivileged"]
tokio-runtime = ["dep:tokio"]
async-io-runtime = ["dep:async-fs", "dep:async-global-executor", "dep:async-lock", "dep:async-io", "dep:async-process", "futures-util/io"]
file-lock = []
unprivileged = ["nix/socket", "dep:which"]

[dependencies]
async-fs = { version = "2.1.1",optional = true}
async-global-executor = { version = "2.4.1",optional = true}
async-lock = { version = "3.3.0",optional = true}
async-notify = "0.3"
async-io = { version = "2.3.1",optional = true}
async-process = { version = "2.1.0" ,optional = true}
bincode = "1.3.3"
bytes = "1.10.1"
futures-channel = { version = "0.3.30", features = ["sink"] }
futures-util = { version = "0.3.30", features = ["sink"] }
libc = "0.2.171"
nix = { version = "0.29.0", features = [
    "signal",
    "user",
    "fs",
    "socket",
    "sched",
    "mount",
    "mman",
    "resource",
    "dir",
    "term",
    "hostname",
    "process",
] }
serde = { version = "1.0", features = ["derive"] }
slab = "0.4.9"
tracing = { version = "0.1.41", features = ["attributes"] }
trait-make = "0.1"
which = { version = "4.4.2", optional = true }

[dependencies.tokio]
version = "1.36"
features = ["full"]
optional = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["file-lock", "unprivileged", "tokio-runtime"]
targets = [
  "i686-unknown-freebsd",
  "i686-unknown-linux-gnu",
  "x86_64-unknown-freebsd",
  "x86_64-unknown-linux-gnu",
]
