[package]
name = "rkb"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "Image builder for rk8s"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/rkb"

[dependencies]
# libfuse-fs = { path = "../libfuse-fs" }
libfuse-fs = "0.1.4"
rfuse3 = { version = "0.0.3", features = ["tokio-runtime", "unprivileged"] }
clap = { version = "4.5.31", features = ["derive"] }
nix = { version = "0.29.0", features = ["fs", "process", "user", "sched", "mount"] }
tokio = { version = "1.44.0", features = ["full"] }
libc = "0.2.171"
dockerfile-parser = "0.9.0"
anyhow = "1.0.98"
tar = "0.4.44"
flate2 = "1.1.1"
walkdir = "2.3"
sha256 = "1.6.0"
oci-spec = "0.8.0"
rand = "0.9.0"
chrono = "0.4.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1.21.3"
dirs = "6.0.0"
oci-distribution = "0.11.0"
indicatif = "0.18.0"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipc-channel = "0.20.1"
reqwest = { version = "0.12.23", features = ["json"] }
axum = "0.8.4"
confy = { version = "1.0.0" }
comfy-table = "7.2.1"
qrcode = "0.14.1"
async-trait = "0.1.89"
paste = "1.0.15"

[dev-dependencies]
tempfile = "3.19.1"
