[package]
name = "rkl"
version = "0.1.0"
edition = "2024"

[dependencies]
libcgroups = { path = "../libcgroups", version = "0.5.1" } 
libcontainer = { path = "../libcontainer", version = "0.5.1" } 
clap = { version = "4.5", features = ["derive"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
nix = { version = "0.29.0", features = ["fs"] }
anyhow = "1.0.95"
protobuf = "3.2.0"
liboci-cli = "0.5.1"
tracing-journald = "0.3.1"
serde_json = "1.0"
tonic = "0.13"
prost = "0.13.5"
serde_yaml = "0.9"
prost-types = "0.12.6"
http-body = "0.4.5"
hyper = "0.14.27"

[dev-dependencies]
tempfile = "3"
scopeguard = "1.2.0"

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13.5"