[package]
name = "rkl"
version = "0.1.0"
edition = "2024"

[lib]
name = "rkl"
path = "src/lib.rs"

[[bin]]
name = "rkl"
path = "src/main.rs"

[dependencies]
libcgroups = { path = "../libcgroups", version = "0.5.1" } 
libcontainer = { path = "../libcontainer", version = "0.5.1" } 
clap = { version = "4.5", features = ["derive"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
nix = { version = "0.29.0", features = ["fs", "mount"] }
anyhow = "1.0.95"
protobuf = "=3.2.0"
liboci-cli = "0.5.1"
tracing-journald = "0.3.1"
serde_json = "1.0"
tonic = "0.13"
prost = "0.13.5"
serde_yaml = "0.9"
prost-types = "0.12.6"
http-body = "0.4.5"
hyper = "0.14.27"
rust-cni = "0.1.2"
serial_test = "3.2.0"
oci-spec = "0.8.0"
tar = "0.4.44"
flate2 = "1.1.1"
sha256 = "1.6.0"
futures = "0.3.31"
daemonize = "0.5.0"

[dev-dependencies]
tempfile = "3"
scopeguard = "1.2.0"

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13.5"
