[package]
name = "rks"
version = "0.1.0"
edition = "2024"

[dependencies]
libcni = { path = "../libcni" }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.32", features = ["derive"] }
quinn = { version = "0.11.8" }
rustls = "0.23"
serde_yaml = "0.9"
bincode = "1.3.3"         
futures = "0.3.31"       
anyhow = "1.0.98"       
rcgen = "0.12.1"
etcd-client = "0.15.0"
ipnetwork = "0.17.0"
serde_json = "1.0.107"
chrono = {version = "0.4.41", features = ["serde"]}
log = "0.4.26"
lazy_static = "1.5.0"
regex = "1.11.1"
context = "3.0.0"
async-trait = "0.1.88"
thiserror = "2.0.12"
native-tls = "0.2.14"
tonic = "0.12.3"
rand = "0.8.5"
netlink-packet-route = "0.22.0"
rtnetlink = "0.16.0"
nix = { version = "0.29.0", features = ["net"] }
dotenvy = "0.15.0"
tempfile = "3.20.0"
tokio-util = "0.7.0"
env_logger = "0.11.0"
futures-util = "0.3" 
time = "0.3" 